# receipt-manager-API

./: .gitignore  Makefile  README.md  pyproject.toml
app/: auth.py  main.py  models.py  templates.py
app/routers/: __init__.py  docs.py  login.py  receipt.py  register.py
app/schemas/: __init__.py  request.py  response.py
database/: database.py  schema.sql
loggers/: logger.py
settings/: config.py  database.json  env.example  gunicorn_conf.py
templates/: receipt_template.html
tests/: conftest.py  test_create_receipt.py  test_get_receipt.py  test_get_receipt_list.py  test_login.py  test_registration.py
utils/: decorators.py
